updated to only include home child details